--- a/index.html
+++ b/index.html
@@ -214,6 +214,10 @@
           </li>
         </ul>
       </section>
+      <section>
+        <h2>Price Table</h2>
+        <p>We offer competitive price</p>
+      </section>
     </main>
     <footer></footer>
   </body>
