--- a/index.html
+++ b/index.html
@@ -217,8 +217,119 @@
       <section>
         <h2>Price Table</h2>
         <p>We offer competitive price</p>
+        <ul>
+          <li>
+            <h3>Free</h3>
+            <p>Free</p>
+            <p>0 &#65284; Per / month</p>
+            <p>Only 2 Operators</p>
+            <p>Notifications</p>
+            <p>Landing Pages</p>
+            <button type="button">Order Now</button>
+          </li>
+          <li>
+            <h3>Standard</h3>
+            <p>Standard</p>
+            <p>5 &#65284; Per / month</p>
+            <p>5+ Operators</p>
+            <p>Notifications</p>
+            <p>Landing Pages</p>
+            <button type="button">Order Now</button>
+          </li>
+          <li>
+            <h3>Premium</h3>
+            <p>Premium</p>
+            <p>10 &#65284; Per / month</p>
+            <p>10+ Operators</p>
+            <p>Notifications</p>
+            <p>Landing Pages</p>
+            <button type="button">Order Now</button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>What Clients Say</h2>
+        <p>
+          Problems trying to resolve the conflict between the two major realms
+          of Classical physics: Newtonian mechanics
+        </p>
+        <ul>
+          <li>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal. Product helps you see how many more days you
+              need to work to reach your financial goal. Product helps you see
+              how many more days you need to work to reach your financial goal.
+            </p>
+            <h4>Wahid Ari</h4>
+            <p>Wahid Ari</p>
+          </li>
+          <li>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal. Product helps you see how many more days you
+              need to work to reach your financial goal. Product helps you see
+              how many more days you need to work to reach your financial goal.
+            </p>
+            <h4>Wahid Ari</h4>
+            <p>Wahid Ari</p>
+          </li>
+          <li>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal. Product helps you see how many more days you
+              need to work to reach your financial goal. Product helps you see
+              how many more days you need to work to reach your financial goal.
+            </p>
+            <h4>Wahid Ari</h4>
+            <p>Wahid Ari</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Join 100 Compannies who boost their business with Product</h2>
+        <button type="button">Get This</button>
+        <img
+          src="./images/graphics.png"
+          alt="graphics"
+          width="351"
+          height="331"
+        />
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <a href="./index.html"
+        ><img src="./images/logoa.png" alt="logo" />Product</a
+      >
+      <ul>
+        <li>
+          <img src="" alt="" />
+        </li>
+        <li>
+          <img src="" alt="" />
+        </li>
+        <li>
+          <img src="" alt="" />
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <h3>Resource</h3>
+          <a href="">About us</a>
+          <a href="">Blog</a>
+          <a href="">Contact</a>
+          <a href="">FAQ</a>
+        </li>
+        <li>
+          <h3>Legal Stuff</h3>
+          <a href="">Disclaimer</a>
+          <a href="">Financing</a>
+          <a href="">Privacy Policy</a>
+        </li>
+      </ul>
+      <h3>knowing you're always on the best energy deal.</h3>
+      <button type="button">Sign up Now</button>
+      <p>Made With Love By Figmaland All Right Reserved</p>
+    </footer>
   </body>
 </html>
