--- a/index.html
+++ b/index.html
@@ -3,40 +3,82 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&family=Montserrat:wght@100..900&family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@400,700,800,0,500;1,500&family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Buisness promotion</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html"
-          ><img src="./images/logo.png" alt="logo" />Product</a
-        >
-        <ul>
-          <li><a href="./index.html">Product</a></li>
-          <li><a href="./pricises.html">Pricing</a></li>
-          <li><a href="./customers.html">Customers</a></li>
-          <li><a href=""></a>Resources</li>
+    <header class="header">
+      <div class="container">
+        <nav class="header-nav">
+          <a class="header-logo" href="./index.html"
+            ><img src="./images/logo.png" alt="logo" />Product</a
+          >
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Product</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pricises.html">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./customers.html">Customers</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="">Resources</a></li>
+          </ul>
+        </nav>
+        <ul class="btn-list">
+          <li><button class="btn-header" type="button">Sign In</button></li>
+          <li>
+            <button class="btn-header second" type="button">Sign Up</button>
+          </li>
         </ul>
-      </nav>
-      <ul>
-        <li><button type="button">Sign In</button></li>
-        <li><button type="button">Sign Up</button></li>
-      </ul>
+      </div>
     </header>
     <main>
-      <section>
-        <h1>|Work at the speed of thought</h1>
-        <p>
-          Tools, tutorials, design and innovation experts, all in one place! The
-          most intuitive way to imagine your next user experience.
-        </p>
-        <ul>
-          <li><button type="button">Get started</button></li>
-          <li><button type="button">Watch the Video</button></li>
-        </ul>
-        <img src="./images/hero-img.png" alt="peoples" />
+      <!-- #region hero -->
+      <section class="hero">
+        <div class="container hero-container">
+          <div class="wrapper">
+            <h1 class="hero-titel">Work at the speed of thought</h1>
+            <p class="hero-text">
+              Tools, tutorials, design and innovation experts, all in one place!
+              The most intuitive way to imagine your next user experience.
+            </p>
+            <ul class="hero-list">
+              <li class="hero-item">
+                <button class="hero-btn" type="button">Get started</button>
+              </li>
+              <li class="hero-item">
+                <button class="hero-btn-second" type="button">
+                  Watch the Video
+                </button>
+              </li>
+            </ul>
+          </div>
+          <img src="./images/hero-img.png" alt="peoples" />
+        </div>
       </section>
-      <section>
+      <!-- #endregion hero -->
+      <section class="section">
         <h2>Product was Built Specifically for You</h2>
         <ul>
           <li>
@@ -62,7 +104,8 @@
         </ul>
         <button type="button">SIGN UP NOW</button>
       </section>
-      <section>
+
+      <section class="section">
         <h4>Effortless Validation for</h4>
         <h2>Management</h2>
         <p>
@@ -92,7 +135,7 @@
           height="500"
         />
       </section>
-      <section>
+      <section class="section">
         <h4>Easier decision making for</h4>
         <h2>Customer Support</h2>
         <p>
@@ -123,7 +166,7 @@
           height="500"
         />
       </section>
-      <section>
+      <section class="section">
         <h4>Optimisation for</h4>
         <h2>Collaborative</h2>
         <p>
@@ -149,7 +192,7 @@
         </ul>
         <img src="./images/collaboration-img.png" alt="collaboration" />
       </section>
-      <section>
+      <section class="section">
         <h2>Quick & Easy Process</h2>
         <p>
           Do you require some help for your project: Conception workshop,
@@ -175,7 +218,7 @@
         </ul>
         <button type="button">Contact our expert</button>
       </section>
-      <section>
+      <section class="section">
         <h2>Contents Strategies</h2>
         <p>
           We focus on ergonomics and meeting you where you work. It's only a
@@ -214,7 +257,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="section">
         <h2>Price Table</h2>
         <p>We offer competitive price</p>
         <ul>
@@ -247,7 +290,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="section">
         <h2>What Clients Say</h2>
         <p>
           Problems trying to resolve the conflict between the two major realms
@@ -286,7 +329,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="section">
         <h2>Join 100 Compannies who boost their business with Product</h2>
         <button type="button">Get This</button>
         <img
