--- a/pricises.html
+++ b/pricises.html
@@ -6,21 +6,29 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html"
+    <header class="header">
+      <nav class="header-nav">
+        <a class="logo" href="./index.html"
           ><img src="./images/logo.png" alt="logo" />Product</a
         >
-        <ul>
-          <li><a href="./index.html">Product</a></li>
-          <li><a href="./pricises.html">Pricing</a></li>
-          <li><a href="./customers.html">Customers</a></li>
-          <li><a href="">Resources</a></li>
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a class="nav-link" href="./index.html">Product</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./pricises.html">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./customers.html">Customers</a>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="">Resources</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><button type="button">Sign In</button></li>
-        <li><button type="button">Sign Up</button></li>
+      <ul class="btn-list">
+        <li><button class="btn-header" type="button">Sign In</button></li>
+        <li>
+          <button class="btn-header second" type="button">Sign Up</button>
+        </li>
       </ul>
     </header>
     <main>
